# TsForecastMachine

./: .gitignore  Makefile  README.md  pyproject.toml
config/: config.yaml  params.yaml
data/raw/: synthetic_retail_shares_brazil_2015_2025.csv
src/: compare.py  predict.py  train.py
src/data_prep/: build_shares.py  features.py
src/evaluate/: evaluate_shares.py
src/models/: alr_transform.py  baselines.py  lstm_softmax.py  nixtla_runner.py
src/utils/: io.py  metrics.py  time.py
src/windows/: rolling_origin.py
